Name:                rebass
Version:             0.0
Description:         Reaper project sync tool
License:             GPL
License-file:        LICENSE.txt
Author:              Juha Paananen, Jari Aarniala
Maintainer:          juha.paananen@gmail.com, jari.aarniala@gmail.com
Build-Type:          Simple
Cabal-Version:       >=1.10

Executable rebass
  Main-Is:           rebass.hs
  Hs-Source-Dirs:    src
  Default-Language:  Haskell98
  Build-Depends:     base >= 3 && < 5, haskell98, 
                     directory >= 1.0.1.1, parsec >= 2.1.0.1, 
                     unix >= 2.4.0.2, old-time >= 1.0.0.5,
                     process >= 1.0.1.3 
-- http://cabaltest.blogspot.com/
-- http://www.haskell.org/cabal/release/cabal-1.10.1.0/doc/users-guide/#test-suites
test-suite parser-tests
  Type:             exitcode-stdio-1.0
  Main-Is:          ParserSpec.hs
  Hs-Source-Dirs:   src test
  Default-Language: Haskell98
  Build-Depends:    HUnit, hspec >= 0.3, haskell2010,
                    parsec >= 2.1.0.1
